fix spacing of top section in mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -145,7 +145,7 @@ ul {
 h2.cover-heading,
 h2.cover-subheading {
     color: white !important;
-    margin: 0 0 8vw 0;
+    margin: 0 0 7vw 0;
 }
 
 h2.cover-heading {
@@ -155,7 +155,7 @@ h2.cover-heading {
 }
 
 h2.cover-subheading {
-    margin: 0 0 8vw 0;
+    margin: 0 0 7vw 0;
     font-size: 4.6vw;
     text-align: left;
     line-height: 150%;
